# segment_packer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: segment_packer.hpp
r-package/: DESCRIPTION  NAMESPACE
r-package/src/: Makevars  Makevars.in  RcppExports.cpp  rcpp_bindings.cpp  segment.cpp  segment_packer.cpp
r-package/src/include/: segment.hpp
